salesforce_sfdx/main/default/objects/OSMX_Indice_Gas__c/OSMX_Indice_Gas__c.object-meta.xml
<CustomObject>
    <label>OSMX_Indice_Gas</label>
    <nameField>
        <label>OSFMX_ConsumosSector2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSMX_Indice_Gases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>