salesforce_sfdx/main/default/objects/OSMX_Indice_Gas__c/fields/Plazo__c.field-meta.xml
<CustomField>
    <fullName>Plazo__c</fullName>
    <label>Plazo</label>
    <type>Date</type>
</CustomField>