salesforce_sfdx/main/default/objects/OSMX_Indice_Gas__c/fields/TipoIndice__c.field-meta.xml
<CustomField>
    <fullName>TipoIndice__c</fullName>
    <label>TipoIndice</label>
    <length>10</length>
    <type>Text</type>
</CustomField>