salesforce_sfdx/main/default/objects/OSMX_Indice_Gas__c/fields/ValorIndice__c.field-meta.xml
<CustomField>
    <fullName>ValorIndice__c</fullName>
    <label>ValorIndice</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>